yamls/cfs/eks.yaml
AWSTemplateFormatVersion: 2010-09-09

Parameters:
  mainStackName:
    Type: String
  VPC:
    Type: String  
  PublicSubnet1Id:
    Type: String
  PublicSubnet2Id:
    Type: String
  BaseVpcSg:
    Type: String

Resources:
  clusterRole:
    Type: "AWS::IAM::Role"
    Properties: 
      RoleName: !Sub ${mainStackName}-eks
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEKSClusterPolicy
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
            Effect: Allow
            Principal:
              Service:
                - eks.amazonaws.com
            Action: sts:AssumeRole
  nodeRole:
    Type: "AWS::IAM::Role"
    Properties:
      RoleName: !Sub ${mainStackName}-node
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          Effect: Allow
          Principal:
            Service:
              - ec2.amazonaws.com
          Action: sts:AssumeRole       
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy
        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
        - arn:aws:iam::aws:policy/AmazonSSMReadOnlyAccess
        - arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy
      Policies:
        - PolicyName: cluster-autoscaler-policy
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                - autoscaling:DescribeAutoScalingGroups
                - autoscaling:DescribeAutoScalingInstances
                - autoscaling:DescribeLaunchConfigurations
                - autoscaling:DescribeTags
                - autoscaling:SetDesiredCapacity
                - autoscaling:TerminateInstanceInAutoScalingGroup
                - ec2:DescribeLaunchTemplateVersions
                Resource: '*'
  # clusterAutoscalerRole:
  #   Type: "AWS::IAM::Role"
  #   Properties:
  #     RoleName: !Sub ${mainStackName}-node
  #     AssumeRolePolicyDocument:
  #       Version: '2012-10-17'
  #       Statement:
  #         Effect: Allow
  #         Principal:
  #           Service:
  #             - ec2.amazonaws.com
  #         Action: sts:AssumeRole       
  #     Policies:
  #       - PolicyName: cluster-autoscaler-policy
  #         PolicyDocument:
  #           Version: "2012-10-17"
  #           Statement:
  #             - Effect: Allow
  #               Action:
  #               - autoscaling:DescribeAutoScalingGroups
  #               - autoscaling:DescribeAutoScalingInstances
  #               - autoscaling:DescribeLaunchConfigurations
  #               - autoscaling:DescribeTags
  #               - autoscaling:SetDesiredCapacity
  #               - autoscaling:TerminateInstanceInAutoScalingGroup
  #               - ec2:DescribeLaunchTemplateVersions
  #               Resource: '*'
  Cluster:
    Type: 'AWS::EKS::Cluster'
    Properties:
      Name: !Ref mainStackName
      Version: '1.21'
      RoleArn: !GetAtt clusterRole.Arn
      ResourcesVpcConfig:
        SubnetIds:
        - !Ref PublicSubnet1Id
        - !Ref PublicSubnet2Id
        SecurityGroupIds:
        - !Ref eksSg
  Nodegroup:
    Type: 'AWS::EKS::Nodegroup'
    Properties:
      NodegroupName: !Sub ${mainStackName}-ng
      ClusterName: !Sub ${Cluster}
      NodeRole: !GetAtt nodeRole.Arn
      ScalingConfig:
        MinSize: 2
        DesiredSize: 3
        MaxSize: 5
      LaunchTemplate:
        Id: !Ref NodeLaunchTemplate
      Subnets:
      - !Ref PublicSubnet1Id
      - !Ref PublicSubnet2Id

  NodeLaunchTemplate:
    Type: "AWS::EC2::LaunchTemplate"
    Properties:
      LaunchTemplateName: !Sub ${mainStackName}-lt
      LaunchTemplateData:
        InstanceType: t3.medium
        # ImageId: ami-0800826177b25080e
        SecurityGroupIds:
        - !Ref nodeSg
  nodeSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${mainStackName}-node
      GroupDescription: provides udp access for turkey stream services
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: udp
        FromPort: 35000
        ToPort: 65000
        CidrIp: 0.0.0.0/0
      - IpProtocol: -1
        SourceSecurityGroupId: !Ref eksSg
      - IpProtocol: tcp
        FromPort: 4443
        ToPort: 4443
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 5349
        ToPort: 5349
        CidrIp: 0.0.0.0/0
      - IpProtocol: -1
        SourceSecurityGroupId: !Ref BaseVpcSg
  eksSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${mainStackName}-eks
      GroupDescription: provides udp access for turkey stream services
      VpcId: !Ref VPC
  eksSgAllowsNodeSg:
   Type: 'AWS::EC2::SecurityGroupIngress'
   Properties:
      GroupId: !Ref eksSg
      IpProtocol: -1
      SourceSecurityGroupId: !Ref nodeSg
  nodeSgAllowsItself:
   Type: 'AWS::EC2::SecurityGroupIngress'
   Properties:
      GroupId: !Ref nodeSg
      IpProtocol: -1
      SourceSecurityGroupId: !Ref nodeSg  
      
        
Outputs:
  eksArn:
    Value: !GetAtt Cluster.Arn
  nodeSgId:
    Value: !Ref nodeSg
    # Value: !GetAtt Cluster.ClusterSecurityGroupId
